--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,18 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Hillas:1982wz,
+      author         = "Hillas, A. M.",
+      title          = "{THE SENSITIVITY OF CHERENKOV RADIATION PULSES TO THE
+                        LONGITUDINAL DEVELOPMENT OF COSMIC RAY SHOWERS}",
+      journal        = "J. Phys.",
+      volume         = "G8",
+      year           = "1982",
+      pages          = "1475-1492",
+      doi            = "10.1088/0305-4616/8/10/017",
+      SLACcitation   = "%%CITATION = JPAGA,G8,1475;%%"
+}
+
 @article{Patterson:1983qj,
       author         = "Patterson, John R. and Hillas, A. M.",
       title          = "{THE RELATION OF THE LATERAL DISTRIBUTION OF CHERENKOV
