--- a/showers.tex
+++ b/showers.tex
@@ -1,9 +1,9 @@
-\chapter[Extensive air showers and UHECR composition]{Extensive air showers}
+\chapter[Extensive air showers]{Extensive air showers}
 \label{sec:showers}
 
 In this chapter, we give an introduction to extensive air showers
 (or only \emph{air showers}, for shortening).
-Althought the physics behind these objects is very rich,
+Although the physics behind these objects is very rich,
 in this text we will give more focus on the selected topics
 which are more relevant in the context of this thesis.
 More detailed and extended materials about the topic can be found
@@ -11,7 +11,7 @@ in Refs.~\cite{GaisserBook,GriederBook}.
 
 In~\cref{sec:showers:phen} we start by a phenomenological description
 of the air shower development, focusing on the particle production in
-both electromagnetic and hadronic component of te shower. 
+both electromagnetic and hadronic component of the shower. 
 In~\cref{sec:shower:simulations} we present the most relevant aspects
 of air shower simulations, which are currently necessary to study
 the  physics and to interpret the measurements of air showers.
@@ -31,8 +31,8 @@ with an atmospheric nucleus. After this first interaction, the secondary
 particle produced also interact with the atmosphere producing more
 particles and so on. This succession of interactions with particle production
 creates the cascade of particles that forms the extensive air shower.
-For the sake of clarity, the description of the cascade is tradionally
-done by spliting it into different components: the \emph{electromagnetic},
+For the sake of clarity, the description of the cascade is traditionally
+done by splitting it into different components: the \emph{electromagnetic},
 the \emph{hadronic} and, eventually, the \emph{muonic component}. It is also traditional
 to describe the air shower development in terms of its longitudinal and lateral profiles.
 The former refers to the shower development along the direction of its axis
@@ -45,17 +45,17 @@ secondary particles, which are nearly all hadrons
 with only an insignificant contribution of photons and leptons.
 Among the produced hadrons, the dominant contribution is by far from pions ($>60\%$),
 followed by kaons and nucleons at similar proportions ($\sim 10\%$). Other
-types of mesons and baryons together count tipically for less than 5\% of
+types of mesons and baryons together count typically for less than 5\% of
 the particles~\cite{Calcagni:2017tws}.
 Besides that, a very small fraction of nuclei can be produced
-by the fragmentation of the target atmosphereic nucleus or the primary (in case it is also a nucleus).
+by the fragmentation of the target atmospheric nucleus or the primary (in case it is also a nucleus).
 After the first interaction, the following air shower development is mostly driven
 by the subsequent processes involving the secondary pions.
 The three types of pions ($\pi^+$, $\pi^-$ and $\pi^0$)
 are produced at similar proportions, which means that about 2/3 of them are charged and
 1/3 is neutral. The charged ones will be responsible to create more
 hadrons and eventually muons, while the neutral ones will decay into photons,
-feding the electromagnetic component of the shower.
+feeding the electromagnetic component of the shower.
 The latter case is firstly described in~\cref{sec:showers:phen:em}
 and the former in~\cref{sec:showers:phen:had}. 
 
@@ -80,16 +80,16 @@ particles with atmospheric nuclei (again in the 1/3 proportion wrt the charged p
 the same chain of electromagnetic interactions takes place again
 and new lower energy electromagnetic cascades are produced.
 This means that the energy carried by the hadronic particles
-is partially, but constinuously, trasfered to electromagnetic particles.
+is partially, but continuously, transferred to electromagnetic particles.
 After a few generations of hadronic interactions ($\sim 6$), about 90\% of
 the primary energy is carried by the electromagnetic component.
 
 
 The length scale of the bremstralung interaction, responsible to produce photons out of
-electrons, is given by the radiation lenght, $X_0$, that is the average distance needed
+electrons, is given by the radiation length, $X_0$, that is the average distance needed
 to electrons to lose all but $1/e$ of its energy. In the atmosphere $X_0\approx 37\text{g/cm}^2$.
-On the other hand, the lenght scale of pair production is of the same order
-of $X_0$, only slightly larger ($\approx 1.3 X_0$). Because of the short lenght scale
+On the other hand, the length scale of pair production is of the same order
+of $X_0$, only slightly larger ($\approx 1.3 X_0$). Because of the short length scale
 given by $X_0$, the electromagnetic shower develops very rapidly, which
 implies a fast increase of the number of particles and a fast decrease of their
 average energy. As lower the energies of the particles, more relevant are the energy losses
@@ -110,7 +110,7 @@ by the electromagnetic component, one can see that the shape of the
 \dEdX profiles is basically the same as the $N_e$ one.
 The depth correspondent to the maximum of these both profiles is called
 the shower maximum and it is symbolized by \xmax. In air shower
-experiments, the \dEdX profile can be acessed by telescopes which
+experiments, the \dEdX profile can be accessed by telescopes which
 measure the fluorescence light emitted by the interaction of the air shower
 with the atmosphere. The \xmax of the shower can then be determined
 from the \dEdX profile.
@@ -126,11 +126,13 @@ from the \dEdX profile.
     \put(18,60){}
   \end{overpic}
   
-  \caption{}
+  \caption{Average longitudinal profiles of air showers obtained
+    from air shower simulations performed with \Conex~\cite{\ConexPaper} and
+    the hadronic interaction models \Fluka~\cite{\FlukaPaper} and \EposLHCLong~\cite{\EposLHCPaper}.}
   \label{fig:shower:phen:prof}
 \end{figure}
 
-The dependences of \xmax with the primary energy ($E_0$) and with the nuclear
+The dependencies of \xmax with the primary energy ($E_0$) and with the nuclear
 mass of the primary particle ($A$) can be expressed by the relation
 \begin{equation}
   \langle\xmax\rangle = \lambda_\text{I}(A)+D_{10}\;\log_{10}\left(\frac{E_0}{A}\right),
@@ -139,13 +141,13 @@ mass of the primary particle ($A$) can be expressed by the relation
 where $\lambda_\text{I}$ is the mean free path of the first interaction.
 The quantity $D_{10} = \text{d}\xmaxmean/\text{d} \log_{10}E_0$
 is called \emph{elongation rate} and it does not depend on $E_0$ and $A$.
-Although the~\cref{eq:shower:xmax} is derived by simplistic analitytic models~\cite{Matthews:2005sd},
+Although the~\cref{eq:shower:xmax} is derived by simplistic analytic models~\cite{Matthews:2005sd},
 it can be certified by using full Monte Carlo simulations that this relation is valid
 in very good approximation.
 
 On the left plot of~\cref{fig:shower:phen:xmax}
 we show the \xmaxmean as a function of the primary energy
-for a set of simulated air showers. The logaritmic energy dependence is clear,
+for a set of simulated air showers. The logarithmic energy dependence is clear,
 as well as the separation between proton and iron initiated showers.
 This dependence of \xmaxmean on the primary mass comes from both terms
 on the right side of~\cref{eq:shower:xmax}. The $\lambda_\text{I}$ term
@@ -164,14 +166,17 @@ is actually equivalent to only one proton shower with energy $E_0/A$.
 \begin{figure}[!ht]
   \centering
   
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.45\textwidth]{electron_profile}
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.45\textwidth]{xmax_mean}
     \put(18,60){}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.45\textwidth]{muon_profile}
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.45\textwidth]{xmax_sig}
     \put(18,60){}
   \end{overpic}
   
-  \caption{}
+  \caption{\xmaxmean (left) and \xmaxsig (right) as a function
+    of the primary energy obtained from air shower simulations performed with
+    \Conex~\cite{\ConexPaper} and the hadronic interaction models \Fluka~\cite{\FlukaPaper}
+    and \EposLHCLong~\cite{\EposLHCPaper}.}
   \label{fig:shower:phen:xmax}
 \end{figure}
 
@@ -230,13 +235,13 @@ for charged pions is into muons and neutrinos
 and the critical energy in which the probability of decaying is
 equivalent to interacting is 85 \GeV. These decays are responsible
 to produce the great majority of the muons of an air shower.
-The tipical number of interactions of charged pions before
+The typical number of interactions of charged pions before
 decaying into muons is 4-8~\cite{Meurer:2005dt}. 
 
 Apart from pion decays, a considerably fraction of the muons reaching
 the ground is produced by the decay of charged kaons.
 In~\cite{Meurer:2005dt,MeurerThesis} the muon
-production in air showers was studyied in details and it was found
+production in air showers was studied in details and it was found
 by using simulations that $\sim 90\%$ of the muons come from the decay
 of charged pions and $\sim 10\%$ of charged kaons. While these particles
 are called \emph{mother}, the particles which interacted hadronically
@@ -246,7 +251,7 @@ it was found that more than 70\% of them are pions, $\approx 20\%$ are nucleons
 and $\approx 6\%$ are kaons. In~\cref{fig:shower:phen:ioana} the energy distributions of the
 grandmother particles are shown and we can see the contribution from these
 different types of particles~\cite{\IoanaICRC}.
-The dominance of pions as gradmother particle is clear,
+The dominance of pions as grandmother particle is clear,
 as well as the fact that most of the interactions of the grandmother particles
 occur at energies of order of $\sim 100 \GeV$.
 
@@ -255,7 +260,10 @@ occur at energies of order of $\sim 100 \GeV$.
 \begin{wrapfigure}{r}{0.5\textwidth}
   \centering
   \includegraphics[width=0.5\textwidth]{energyDistAuger}
-  \caption{\cite{\IoanaICRC}}
+  \caption{Energy distributions of the grandmother particles
+    of muons that reaches the ground with lateral distances between 1000 and 2000 m  
+    in a proton initiated shower with primary energy \E{19}.  
+    (Plot reproduced from Ref.\cite{\IoanaICRC})}
   \label{fig:shower:phen:ioana}
 \end{wrapfigure}
 
@@ -294,7 +302,7 @@ Besides increasing the number of muons, increasing the (anti)baryon
 production in hadron-air interactions also affects the energy spectra
 of the produced muons. It was argued in Ref.~\cite{\EposPaper} that
 larger (anti)baryon production implies in shifting the muon energy spectra
-to lower energies. Since acessing the energy spectra of muons at the ground
+to lower energies. Since accessing the energy spectra of muons at the ground
 is very challenging experimentally, in~\cref{sec:observable} we propose
 a new observable to be used for that considering experiments with
 two different muon detectors.
@@ -314,9 +322,22 @@ that the muons are much weakly attenuated, after the shower reaches its maximum 
 than the electrons. The number of muons after the maximum depth decreases very slowly
 and after a certain atmospheric depth, only the muonic component survives to the attenuation.
 
+%%%%%%%%%%%%%% NMU MOMENTS %%%%%%%%%%%%%%%
+\begin{wrapfigure}{R}{0.5\textwidth}
+  \centering
+  \includegraphics[width=0.5\textwidth]{nmu_mean}
+  \caption{Average \nmu as a function of the primary energy
+    for a set of showers simulated with \Conex~\cite{\ConexPaper} and
+    the hadronic interaction models
+    \Fluka~\cite{\FlukaPaper} and \EposLHCLong~\cite{\EposLHCPaper}.
+    The \nmu here is defined as all the muons which reach an observation
+    level of 875 g/cm$^2$ with energy above 1 \GeV.}
+  
+  \label{fig:shower:phen:nmu}
+\end{wrapfigure}
 
 The number of muons (\nmu) observed
-at a given atmospheric depth is a tipical quantity of the shower.
+at a given atmospheric depth is a typical quantity of the shower.
 A relation between \nmu and the primary energy ($E_0$) and mass ($A$)
 can also be obtained from simplified analytic models~\cite{Matthews:2005sd}
 and confirmed by full Monte Carlo simulations~\cite{AlvarezMuniz:2002ne}.
@@ -334,21 +355,6 @@ Results of measurements of \nmu, as well as other
 observables related to the muonic component will be presented
 in~\cref{sec:shower:observables}.
 
-%%%%%%%%%%%%%% NMU MOMENTS %%%%%%%%%%%%%%%
-\begin{figure}[!ht]
-  \centering
-  
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.45\textwidth]{electron_profile}
-    \put(18,60){}
-  \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.45\textwidth]{muon_profile}
-    \put(18,60){}
-  \end{overpic}
-  
-  \caption{}
-  \label{fig:shower:phen:nmu}
-\end{figure}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Air shower simulations}
@@ -360,8 +366,8 @@ in~\cref{sec:shower:simulations:codes} and
 an overview of the hadronic interaction models used by them, in~\cref{sec:shower:simulations:models}. 
 Besides the hadronic interaction models, the air shower simulation codes also
 make use of electromagnetic interaction models. The commonly used one is \EGS~\cite{Nelson:1985ec}
-Since the electromagnetic proccesses are properly described by quantum electrodynamics (QED),
-their modelling is not considered to be a significant
+Since the electromagnetic processes are properly described by quantum electrodynamics (QED),
+their modeling is not considered to be a significant
 source of uncertainties on the air shower simulations.
 Because of that, we will only focus here on the hadronic interaction models,
 which, in turn, are the most relevant source of uncertainties.
@@ -377,13 +383,13 @@ To simulate an air shower taking into account all the
 relevant aspects is surely a very complex task.
 All the particles produced have to be propagated 3-dimensionally
 thought the atmosphere and their interactions with atmospheric atoms
-have to be properly modelled. The effect of the
+have to be properly modeled. The effect of the
 structure of the atmosphere with changing density
 and the earth magnetic field also have to be taken into account.
 Besides that, the extremely large number of particles makes
 the computational cost of an air shower simulation extremely large.
 Because of that, the full simulation turns to be
-impossible for pratical purposes and, thus, special strategies
+impossible for practical purposes and, thus, special strategies
 have to be developed by simulation softwares to reduce the complexity
 of the problem.
 
@@ -396,7 +402,7 @@ This class of software includes \Mooca~\cite{\MoocaPaper},
 being the latter the one used in this thesis.
 To reduce the computing time, an algorithm called \emph{thinning}
 is usually applied~\cite{HillasThinning1,HillasThinning2}.
-Intead of following all the particles, by using the
+Instead of following all the particles, by using the
 thinning algorithm only a number of them are selected
 to be followed and a weight is given to these particles
 which corresponds to the number of particles that
@@ -407,22 +413,22 @@ A few parameters is usually needed
 to set up the thinning configuration. As an example, in \Corsika
 the maximum particle energy in which the thinning algorithm is applied is
 set by the $\varepsilon_\text{th}$ parameter, which is actually the fraction 
-with relation to the energy of the primary. This parameter can be set separetely for
-electromagnetic and hadronic particles and tipical values are between $10^{-2}--10^{-7}$.
+with relation to the energy of the primary. This parameter can be set separately for
+electromagnetic and hadronic particles and typical values are between $10^{-2}-10^{-7}$.
 As smaller the values of $\varepsilon_\text{th}$, more precise the simulation will be,
 but with the cost of longer computing time. The maximum weight allowed is also a parameter to be set
-and its tipical values lie between 100-10000. Since the thinning algorithm removes
+and its typical values lie between 100-10000. Since the thinning algorithm removes
 the important information of the geometrical spread of the particles, for some analysis
 an \emph{dethinning} algorithm has to be applied~\cite{Stokes:2011wf}.
 
 A second class of simulation softwares, called \emph{hybrid}, makes use of Monte Carlo techniques
 to simulate only the interactions at the highest energies and, below a certain
 energy threshold, cascade equation are applied~\cite{Bossard:2000jh} to compute the
-number of each type of particle as a function of the amospheric depth.
+number of each type of particle as a function of the atmospheric depth.
 This means that the solution of the cascade equation gives only a 1-dimensional
 description of the shower and all the information about the lateral distributions of
 the particles is lost. Since for many applications only the longitudinal profile
-of the shower is needed, this class of software turns to be very usefull.
+of the shower is needed, this class of software turns to be very useful.
 The very short computing time required to solve the cascade equations
 makes these softwares very fast. One of the most used code of this kind
 is \Conex~\cite{\ConexPaper},
@@ -441,14 +447,14 @@ similar to \Conex or \Seneca.
 The models used to describe the hadronic interactions at high energies 
 are by far the most relevant source of uncertainties on the prediction of
 air shower observables by simulations. Although the strong interactions can be
-sucesfully described by the \emph{quantum cromodynamics} theory (QCD),
+successfully described by the \emph{quantum cromodynamics} theory (QCD),
 we are still not able to compute the bulk of hadronic particle production processes. 
 
 The hadronic interactions are described by first considering hadrons as constituted
 by point-like particles called \emph{partons}. Then, the interactions between partons
-are treated diferently depending on the transfer momentum: \emph{hard} and \emph{soft}
-proccesses, in which there is a large and small momentum transfer, respectively.
-While the properties of hard proccesses can be properly computed by means of
+are treated differently depending on the transfer momentum: \emph{hard} and \emph{soft}
+processes, in which there is a large and small momentum transfer, respectively.
+While the properties of hard processes can be properly computed by means of
 perturbative QCD, the soft ones require either lattice calculations
 or phenomenological models to be described. Because of the long processing time
 required by lattice calculations, the phenomenological approach
@@ -456,17 +462,17 @@ is applied by hadronic interaction models.
 
 All the currently used hadronic models for high-energy interactions
 are based on Gribov's Reggeon Field Theory~\cite{Gribov1968,Drescher:2000ha}, in which
-parton-parton scattering is described by the exchaging of particles
-called \emph{reggeons} and \emph{pomerons}. Another examples of commom features
-of all models are the application of minijet and string fragmentations models.
+parton-parton scattering is described by the exchanging of particles
+called \emph{reggeons} and \emph{pomerons}. Another examples of common features
+of all models are the application of minijet and string fragmentation models.
 An intrinsic feature of these phenomenological models is the large number of parameters
-that cannot be determined theoretically, but they have to be tunned instead.
+that cannot be determined theoretically, but they have to be tuned instead.
 For that, a large number of accelerator measurements are used. The problem with this
 strategy is that the accelerator measurements cover only a small fraction
 of the energy range and particle production phase space that is relevant
 for describing air showers. 
 
-The problem with the model tunning can be split in three parts.
+The problem with the model tuning can be split in three parts.
 First, the highest energy collisions studied in accelerators
 ($\sqrt{s} = 13 \TeV$ reached by LHC) is still much lower
 energy than the interaction of a high energy cosmic ray ($\sqrt{s}\approx 400$ for
@@ -482,7 +488,7 @@ As a consequence of the phenomenological nature of the models
 in combination with the problems with accelerator data listed above,
 the predictions of air shower simulations with different hadronic
 interaction models turn to be discordant. Because of that,
-it is a commom approach to compare the air shower measurements to
+it is a common approach to compare the air shower measurements to
 simulations with a number of different models and to treat
 the differences between them as a systematic uncertainty
 of theoretical nature.
@@ -495,10 +501,11 @@ for high energy interactions are
 Among these, \QGSJetLong, \EposLHCLong and \SibyllNewLong are updated
 to take into account recent LHC data.  
 
+
 Below a certain energy threshold ($\sim 100 \GeV$), the hadronic interactions
 in air shower simulations are described by the so called \emph{low energy models}, which
 are much simpler than the high energy ones. The particle production, for example,
-is usually modelled by means of empirical parametrizations.
+is usually modeled by means of empirical parametrizations.
 The most used low energy models are \Urqmd~\cite{\UrqmdPaper},
 \Gheisha~\cite{Gheisha1985} and \Fluka~\cite{\FlukaPaper}.
 A review of these models can be found in Ref.\cite{Heck:2004rq}.
@@ -531,7 +538,7 @@ A summary is finally presented in~\cref{sec:shower:observables:summary}.
 
 The \xmax (see~\cref{sec:showers:phen:em}) can be measured directly
 by fluorescence telescopes, which can measure the energy deposited
-by the air shower along the atmosphere. This technique was first sucesfully applied
+by the air shower along the atmosphere. This technique was first successfully applied
 by Fly's Eyes experiment~\cite{\FlysEyesPaper},
 posteriorly followed by HiRes~\cite{\HiResPaper} and recently it
 has been used by Telescope Array~\cite{\TAXmaxPaper} and
@@ -545,10 +552,11 @@ Yakutsk~\cite{\YakutskPaper,\YakutskXmaxPaper} and CASA-BLANCA~\cite{\CasaBlanca
 In~\cref{fig:shower:observables:xmax:all}
 we show a compilation of \xmaxmean measurements from \E{15.0}
 up to the highest energies and
-in~\cref{fig:shower:observables:xmax:uhe} we show the most up to date
+in~\cref{fig:shower:observables:xmax:auger,fig:shower:observables:xmax:ta}
+we show the most up to date
 \xmax results of Pierre Auger Observatory~\cite{\AugerXmaxICRC2017Paper}
 and Telescope Array~\cite{TAComp2017}.
-The \xmaxsig is also shown togheter with the \xmaxmean.
+The \xmaxsig is also shown together with the \xmaxmean.
 
 %%%%%%%%%%%%%% XMAX ALL %%%%%%%%%%%%%%%
 \begin{figure}[!ht]
@@ -558,29 +566,9 @@ The \xmaxsig is also shown togheter with the \xmaxmean.
     \put(18,60){}
   \end{overpic}
 
-  \caption{\cite{Kampert:2012mx}}
+  \caption{Compilation of \xmaxmean results reproduced from Ref.\cite{Kampert:2012mx}.}
   \label{fig:shower:observables:xmax:all}
 \end{figure}
-
-%%%%%%%%%%%%%% XMAX UHE %%%%%%%%%%%%%%%
-\begin{figure}[!ht]
-  \centering
-  
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.8\textwidth]{xmax_auger_icrc}
-    \put(18,60){}
-  \end{overpic}
-  
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.4\textwidth]{xmax_mean_ta}
-    \put(18,60){}
-  \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.4\textwidth]{xmax_sig_ta}
-    \put(18,60){}
-  \end{overpic}
-
-  \caption{\cite{TAComp2017} \cite{\AugerXmaxICRC2017Paper}}
-  \label{fig:shower:observables:xmax:uhe}
-\end{figure}
-
 
 The colored curves in~\cref{fig:shower:observables:xmax:all}
 show the \xmaxmean predictions from
@@ -593,6 +581,36 @@ the full \xmax distributions can be compared and the fractions of different
 groups of primaries can be fitted. This procedure has been applied by Pierre Auger
 Observatory in Ref.~\cite{Aab:2014aea}.
 
+%%%%%%%%%%%%%% XMAX AUGER %%%%%%%%%%%%%%%
+\begin{figure}[!ht]
+  \centering
+  
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.8\textwidth]{xmax_auger_icrc}
+    \put(18,60){}
+  \end{overpic}
+  
+  \caption{\xmaxmean and \xmaxsig as a function of the primary energy
+    as measured by Pierre Auger Observatory. Plot reproduced from Ref.\cite{\AugerXmaxICRC2017Paper}.}
+  \label{fig:shower:observables:xmax:auger}
+\end{figure}
+
+%%%%%%%%%%%%%% XMAX TA %%%%%%%%%%%%%%%
+\begin{figure}[!ht]
+  \centering
+  
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.4\textwidth]{xmax_mean_ta}
+    \put(18,60){}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.4\textwidth]{xmax_sig_ta}
+    \put(18,60){}
+  \end{overpic}
+
+  \caption{\xmaxmean and \xmaxsig as a function of the primary energy
+    as measured by Telescope Array experiment. Plot reproduced from Ref.\cite{TAComp2017}.}
+  \label{fig:shower:observables:xmax:ta}
+\end{figure}
+
+
 The composition interpretation of the \xmax measurements
 is only possible because this observable is well described
 by Monte Carlo simulations using hadronic interaction models.
@@ -601,10 +619,10 @@ we can first see that the measured \xmaxmean lies
 always in between the predictions for protons and iron nuclei.
 Furthermore, it is important the fact that
 the Monte Carlo predictions with different hadronic interaction models
-do not diverge substantially, which reduces the model depencencies
+do not diverge substantially, which reduces the model dependencies
 on the composition interpretations of the measurements.
 
-Another importante feature of the \xmax analyses is
+Another important feature of the \xmax analyses is
 that the detector biases can be fully removed and the measured values
 of the \xmaxmean and \xmaxsig can be directly compared to
 the ones from shower simulations, without the requirement of simulating
@@ -613,12 +631,13 @@ detector biases by using the so called \emph{fiducial volume cuts},
 which reduces significantly the number of events~\cite{\AugerXmaxPRDPaper}.
 On the other hand, because of the lack of statistics,
 Telescope Array opt for not to perform any strategy to unbias the \xmax moments.
-Intead, the measurements are compared to
+Instead, the measurements are compared to
 simulation that include all the detector effects. As a consequence,
 the \xmax moments as measured by both experiments cannot
 be compared to each other directly.
 
-From~\cref{fig:shower:observables:xmax:uhe}, the composition interpretation
+From~\cref{fig:shower:observables:xmax:auger,fig:shower:observables:xmax:ta},
+the composition interpretation
 of both Auger and Telescope Array \xmax data seem to be incompatible.
 The Auger data shows a clear changing of the average composition from a very light
 composition around \E{18.3} to an intermediate one around \E{19.5}. This trending is confirmed
@@ -629,7 +648,7 @@ up to the highest energies. This apparent inconsistency has been studied
 by a working group formed of members of both collaboration and the most recent
 conclusion is that, taking into account the detector effects intrinsic of the Telescope Array
 measurements and all the systematic uncertainties, the results of Telescope Array
-are actually compatible with the composition infered from Auger data up to \E{19}~\cite{VitorICRC2017}.
+are actually compatible with the composition inferred from Auger data up to \E{19}~\cite{VitorICRC2017}.
 Above this energy it was possible to take any conclusion
 because of the lack of statistics of the Telescope Array measurements. 
 
@@ -652,7 +671,7 @@ level.
 To be able to detect muons isolately, the detectors are usually shielded so the
 electromagnetic component is absorbed before reaching being detected. This can
 be done either by placing a layer of a heavy material on the top of the detector
-or by buring it few meters below the ground level. It turns out that low energetic muons
+or by burying it few meters below the ground level. It turns out that low energetic muons
 also end up being absorbed, and as a consequence, each experiment measures
 muons above a different energy threshold and the \nmu is different.
 The lateral distance range in which the muons are detected is also
@@ -661,17 +680,17 @@ the experiments are always made of granular arrays, the distance between the det
 usually determine in which lateral distance the \nmu is estimated. Lastly,
 the observation level of the experiment affects the \nmu because of the atmospheric attenuation,
 which affects much strongly the electromagnetic component, but it is still relevant for
-muon detections.
+muon detection.
 
 Among the results of measurements of \nmu and $\rho_\mu$ in air shower experiments,
 we have selected three to present here. The first one are the
 measurements by HiRes/MIA experiments of the density of muons at the ground
-in air showers initiated by cosmic rays of energy approaximately in the range
+in air showers initiated by cosmic rays of energy approximately in the range
 between \E{17} and \E{18}. The experimental setup consisted of a set of fluorescence
 telescopes of the HiRes experiment~\cite{\HiResPaper} combined with a detector array of
 MIA~\cite{\MIAPaper}. The surface detectors were formed by scintilator counters
 buried about 3 m below the ground level, which implies in an energy threshold for muons
-of aroud 850 \MeV. The density of muons at a lateral
+of around 850 \MeV. The density of muons at a lateral
 distance of 600 m ($\rho_\mu(600)$) was reconstructed and compared to simulations.
 On the left plot of~\cref{fig:shower:observables:nmu} we reproduce
 the plot of $\rho_\mu(600)$ as a function of the primary energy as published
@@ -698,7 +717,10 @@ in 1999.
     \put(18,60){}
   \end{overpic}
   
-  \caption{}
+  \caption{Muon density as measured by HiRes/MIA (left)
+    and IceTop (middle) and number of muons as measured by Pierre Auger Observatory
+    in highly inclined showers (right). Plots reproduced from
+    Refs.~\cite{\HiResMIAMuonPaper,\IceTopMuonPaper,\AugerHASMuonPaper}.}
   \label{fig:shower:observables:nmu}
 \end{figure}
 
@@ -707,11 +729,11 @@ by IceTop detector~\cite{\IceTopPaper}, part of the IceCube experiment~\cite{\Ic
 by using ice-Cherenkov surface detectors.
 The primary energy range of these measurements goes from \E{15} to \E{17}
 and the density of muons at 600 and 800 m from the shower axis was estimated
-as muon content observable. On the midlle plot of~\cref{fig:shower:observables:nmu}
+as muon content observable. On the middle plot of~\cref{fig:shower:observables:nmu}
 we reproduce the result from the Ref.~\cite{\IceTopMuonPaper}
 which shows the $\rho_\mu$ as a function of energy compared to simulation predictions
 by using the \SibyllNewLong as hadronic interaction model.
-The muon deficit can be again seen at energies around \E{17}. Althought these are still
+The muon deficit can be again seen at energies around \E{17}. Although these are still
 preliminary results, it is worthwhile to present it here because they show that
 the muon deficit problem is still existing at relatively low energies (<\E{18}),
 even by using modern hadronic interaction models like \SibyllNewLong.
@@ -771,6 +793,23 @@ The primary energy range of this analysis is similar to the one of IceTop shown
 in the previous section.
 
 
+%%%%%%%%%%%%%% FURTHER 1 %%%%%%%%%%%%%%%
+\begin{figure}[!ht]
+  \centering
+  
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.48\textwidth]{kascade_attenuation}
+    \put(18,60){}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 -0.1 1 1,width=0.48\textwidth]{mpd_auger}
+    \put(18,60){}
+  \end{overpic}
+  
+  \caption{Muon attenuation length as measured by KASCADE-Grande experiments (left)
+    and the maximum muon production depth as measured by Pierre Auger Observatory (right).
+  Plots reproduced from Refs.~\cite{Apel:2017thr,\AugerMPDPaper}.}
+  \label{fig:shower:observables:further1}
+\end{figure}
+
 The second measurement to be presented is the longitudinal depth
 of the maximum of the muon production profile (\xmumax),
 which can be measured by using the temporal structure of the
@@ -778,15 +817,16 @@ water-Cherenkov detectors of Pierre Auger Observatory
 in highly inclined showers~\cite{\AugerMPDPaper}.
 The main results is the energy evolution of \xmumaxmean that is show
 on the right plot of~\cref{fig:shower:observables:further1}.
-Althought the composition interpretation of these measurements
+Although the composition interpretation of these measurements
 depends strongly on the hadronic interaction model, it can be seen that
-for both \QGSJetLong and \EposLHCLong the infered composition would be
+for both \QGSJetLong and \EposLHCLong the inferred composition would be
 much heavier than the expected from the \xmaxmean measurements. The \EposLHCLong
 case is even worst because it implies in a composition even heavier than iron nuclei.
 In Refs.~\cite{Ostapchenko:2016bir,Pierog:2015ifw}
 it has been shown that \xmumax is very sensitive to the properties of
 the pion-air interactions and therefore its measurements
-can be effectively used to contrain hadronic models.
+can be effectively used to constrain hadronic models.
+
 
 
 The third and forth observables to be mentioned are related to the quantity called
@@ -804,7 +844,7 @@ In~\cref{fig:shower:observables:further2}
 we show the main results of both analysis. 
 The conclusions from both analysis are similar, being that the composition
 extracted directly from $\sec(\theta)_\text{max}$ and $\Delta_\text{s}$
-are not compatible with the one infered from \xmax measurements.
+are not compatible with the one inferred from \xmax measurements.
 However, the inconsistency is not
 as strong as in the case of \nmu and \xmumax. This intermediate behavior can
 be understood by the fact that the risetime parameter is not sensitive to
@@ -815,22 +855,8 @@ parameter can be calibrated by using the \xmax measurements and as a result
 consistent composition inferences can be done.
 
 
-%%%%%%%%%%%%%% FURTHER 1 %%%%%%%%%%%%%%%
-\begin{figure}[!ht]
-  \centering
-  
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.48\textwidth]{kascade_attenuation}
-    \put(18,60){}
-  \end{overpic}
-  \begin{overpic}[clip, rviewport=0 -0.1 1 1,width=0.48\textwidth]{mpd_auger}
-    \put(18,60){}
-  \end{overpic}
-  
-  \caption{}
-  \label{fig:shower:observables:further1}
-\end{figure}
 
-%%%%%%%%%%%%%% FURTHER 1 %%%%%%%%%%%%%%%
+%%%%%%%%%%%%%% FURTHER 2 %%%%%%%%%%%%%%%
 \begin{figure}[!ht]
   \centering
   
@@ -842,7 +868,9 @@ consistent composition inferences can be done.
   \end{overpic}
 
   
-  \caption{}
+  \caption{Risetime asymmetry (left) and the delta parameter (right)
+    as measured by Pierre Auger Observatory. Plots reproduced
+    from Refs.\cite{\AugerAsymmetryPaper,\AugerDeltaPaper}.}
   \label{fig:shower:observables:further2}
 \end{figure}
 
@@ -852,6 +880,65 @@ consistent composition inferences can be done.
 \label{sec:shower:observables:summary}
 
 
-In summary, YYY
+We can divide the air shower measurements presented here
+in three categories: pure electromagnetic, pure muonic and mixed.
+The only pure electromagnetic measurement discussed is
+the \xmax one, which can be used to study cosmic rays
+composition because, among other reasons,
+the predictions from air shower simulations are consistent
+with the data.
 
+The pure muonic measurements include number (or density)
+of muons (\nmu), maximum of the muon production depth (\xmumax)
+and the muon attenuation length ($\Lambda_\mu$). The conclusion concerning
+these measurements is that the Monte Carlo simulations fail
+on describing properly the muonic component. As a consequence,
+observables like \nmu and \xmumax cannot be used to infer cosmic rays composition.
+One particular manifestation of this inconsistency between data and simulations
+is the so called muon deficit problem, which is observed from \E{17}
+up to the highest energies.
+
+The mixed measurements presented are the ones related to the risetime
+parameter, the risetime asymmetry ($\sec(\theta)_\text{max}$) and the delta
+parameter ($\Delta_S$). In these cases, the composition interpretation
+of the measurements does not imply in non-physical conclusions
+(average nuclear mass heavier than iron nuclei), however,
+it is not, in general, compatible with the composition inferred
+from the \xmax measurements. This behavior is expected also because
+of the failure of the simulation to predict the muonic component properly.
+
+An usual method to compare the composition interpretation from
+several measurements is to convert their average value to the average
+of the logarithm of the nuclear mass, $\langle\ln A\rangle$. 
+This conversion can be performed for observables that correlates
+linearly with $\ln A$, through the relation
+\begin{equation}
+  \langle\ln A\rangle = \frac{\langle p_\text{data}\rangle - \langle p_\text{MC}^\text{proton}\rangle}{\langle p_\text{MC}^\text{iron}\rangle - \langle p_\text{MC}^\text{proton}\rangle}, 
+  \label{eq:shower:lna}
+\end{equation}
+where $p$ is an arbitrary observable and $p_\text{MC}$ is obtained from Monte Carlo simulations.
+In~\cref{fig:shower:observables:lna} we show the $\langle \ln A\rangle$
+as a function of primary energy
+for all the observables measured by Pierre Auger Observatory presented in this section. 
+The upper plot refers to the hadronic model \EposLHCLong, while the lower one to \QGSJetLong.
+
+
+%%%%%%%%%%%%%% LNA ALL %%%%%%%%%%%%%%%
+\begin{figure}[!ht]
+  \centering
+  
+  \begin{overpic}[clip, rviewport=0 0.142 1 1,width=0.65\textwidth]{lna_epos}
+    \put(18,60){}
+  \end{overpic}
+
+  \begin{overpic}[clip, rviewport=0 0 1 0.98,width=0.65\textwidth]{lna_qgsjet}
+    \put(18,60){}
+  \end{overpic}
+  
+  \caption{$\langle\ln A\rangle$ as a function of energy for a set of
+    observables measured by Pierre Auger Observatory. The hadronic interaction
+    models \EposLHCLong (top) and \QGSJetLong (bottom) to perform the convertion
+    represented by~\cref{eq:shower:lna}.}
+  \label{fig:shower:observables:lna}
+\end{figure}
 
